--- a/layouts/partials/social.html
+++ b/layouts/partials/social.html
@@ -98,6 +98,14 @@
 <td><a href="//facebook.com/{{.}}" target="_blank" title="Facebook"><i class="fa fa-facebook"></i></a></td>
 {{ end }}
 
+{{ with .Site.Social.googlescholar }}
+<td><a href="//scholar.google.com/citations?user={{.}}" target="_blank" title="Google Scholar"><i class="ai ai-google-scholar"></i></a></td>
+{{ end }}
+
+{{ with .Site.Social.orcid }}
+<td><a href="//orcid.org/{{.}}" target="_blank" title="ORCID"><i class="ai ai-orcid"></i></a></td>
+{{ end }}
+
 {{ with .Site.Social.twitter }}
 <td><a href="//twitter.com/{{.}}" target="_blank" title="Twitter"><i class="fa fa-twitter"></i></a></td>
 {{ end }}
