--- a/layouts/partials/article_list.html
+++ b/layouts/partials/article_list.html
@@ -11,7 +11,7 @@
         {{ partial "article_header" . }}
         <div class="article-entry" itemprop="articleBody">
             <p>
-                {{ .Description | default .Summary }}
+                {{ default .Summary }}
             </p>
             <p class="article-more-link">
                 <a href="{{ .Permalink }}">
